[gd_scene load_steps=15 format=3 uid="uid://crm3npx2un8fe"]

[ext_resource type="Texture2D" uid="uid://cq6p3dccgaon4" path="res://assets/Traps/Fire/Off.png" id="1_3w0iy"]
[ext_resource type="Texture2D" uid="uid://k5g5x3yw6ajb" path="res://assets/Traps/Fire/Hit (16x32).png" id="1_xth6m"]
[ext_resource type="Script" path="res://scripts/Fire.gd" id="1_yy677"]
[ext_resource type="Texture2D" uid="uid://b0r07rn2v4ohp" path="res://assets/Traps/Fire/On (16x32).png" id="3_f1oju"]

[sub_resource type="AtlasTexture" id="AtlasTexture_chgj0"]
atlas = ExtResource("1_xth6m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcffs"]
atlas = ExtResource("1_xth6m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma0v6"]
atlas = ExtResource("1_xth6m")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6f4"]
atlas = ExtResource("1_xth6m")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2v16"]
atlas = ExtResource("3_f1oju")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp6lf"]
atlas = ExtResource("3_f1oju")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydna7"]
atlas = ExtResource("3_f1oju")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyx6m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chgj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcffs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma0v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6f4")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3w0iy")
}],
"loop": true,
"name": &"off",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2v16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp6lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydna7")
}],
"loop": true,
"name": &"on",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5mts"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2opwr"]
size = Vector2(14, 16)

[node name="Fire" type="StaticBody2D"]
z_index = 11
scale = Vector2(2.5, 2.5)
collision_layer = 4096
collision_mask = 512
script = ExtResource("1_yy677")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fyx6m")
animation = &"on"
autoplay = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_w5mts")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_2opwr")

[node name="fireCooldown" type="Timer" parent="."]
one_shot = true

[node name="fireDuration" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="timeout" from="fireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="fireDuration" to="." method="_on_fire_duration_timeout"]
